Fix the off center issue with the default block navigation menu, and make sure that sub menus don't show up when the navigation block is in the footer.

--- a/modern-business/sass/navigation/_menu-footer-navigation.scss
+++ b/modern-business/sass/navigation/_menu-footer-navigation.scss
@@ -20,3 +20,15 @@
 	}
 
 }
+
+footer {
+
+	.wp-block-a8c-navigation-menu {
+
+		.sub-menu {
+			visibility: hidden;
+		}
+
+	}
+
+}
