--- a/modern-business/sass/navigation/_menu-main-navigation.scss
+++ b/modern-business/sass/navigation/_menu-main-navigation.scss
@@ -150,6 +150,11 @@
 					margin-right: #{1 * $size__spacing-unit};
 				}
 			}
+
+			&:last-child > a,
+			&:last-child.menu-item-has-children .submenu-expand {
+				margin-right: 0;
+			}
 		}
 	}
 
