--- a/modern-business/style-editor.css
+++ b/modern-business/style-editor.css
@@ -379,6 +379,11 @@ body.page .main-navigation {
   margin-right: 1rem;
 }
 
+.main-navigation .default-menu > li:last-child > a,
+.main-navigation .default-menu > li:last-child.menu-item-has-children .submenu-expand {
+  margin-right: 0;
+}
+
 .main-navigation .sub-menu {
   background-color: #c43d80;
   color: #fff;
