--- a/modern-business/style-rtl.css
+++ b/modern-business/style-rtl.css
@@ -1142,6 +1142,11 @@ body.page .main-navigation {
   margin-left: 1rem;
 }
 
+.main-navigation .default-menu > li:last-child > a,
+.main-navigation .default-menu > li:last-child.menu-item-has-children .submenu-expand {
+  margin-left: 0;
+}
+
 .main-navigation .sub-menu {
   background-color: #c43d80;
   color: #fff;
@@ -1589,6 +1594,10 @@ body.page .main-navigation {
 .footer-navigation .footer-menu li {
   display: inline;
   margin-left: 1rem;
+}
+
+footer .wp-block-a8c-navigation-menu .sub-menu {
+  visibility: hidden;
 }
 
 /*--------------------------------------------------------------
